--- a/train/config/uncertainty/l2_depth_4.cfg
+++ b/train/config/uncertainty/l2_depth_4.cfg
@@ -1,18 +1,18 @@
 [IO]
-src_datasets=[('/home/dwu/trainData/deep_denoiser_ensemble/data/mayo_2d_3_layer_mean/dose_rate_4.h5', '/home/dwu/trainData/uncertainty_prediction/denoising_results/mayo_2d_3_layer_mean/l2_depth_3/dose_rate_4/dose_rate_4.h5')]
-dst_datasets=[('/home/dwu/trainData/deep_denoiser_ensemble/data/mayo_2d_3_layer_mean/dose_rate_1.h5', '/home/dwu/trainData/uncertainty_prediction/denoising_results/mayo_2d_3_layer_mean/l2_depth_3/dose_rate_4/dose_rate_4.h5')]
-manifest='/home/dwu/trainData/deep_denoiser_ensemble/data/mayo_2d_3_layer_mean/manifest.csv'
-output_dir='/home/dwu/trainData/uncertainty_prediction/denoising_results/mayo_2d_3_layer_mean/l2_depth_3/dose_rate_4/uncertainty_model'
+src_datasets=[('/home/dwu/trainData/uncertainty_prediction/data/mayo_2d_3_layer_mean/dose_rate_4.h5', '/home/dwu/trainData/uncertainty_prediction/train/mayo_2d_3_layer_mean/dose_rate_4/denoising/l2_depth_4/results/dose_rate_4.h5')]
+dst_datasets=[('/home/dwu/trainData/uncertainty_prediction/data/mayo_2d_3_layer_mean/dose_rate_1.h5', '/home/dwu/trainData/uncertainty_prediction/train/mayo_2d_3_layer_mean/dose_rate_4/denoising/l2_depth_4/results/dose_rate_4.h5')]
+manifest='/home/dwu/trainData/uncertainty_prediction/data/mayo_2d_3_layer_mean/manifest.csv'
+output_dir='/home/dwu/trainData/uncertainty_prediction/mayo_2d_3_layer_mean/dose_rate_4/uncertainty'
 train=
 valid=['L291','L143','L067']
 # train=['L291']
 # valid=['L291']
 # the final output directory will be os.path.join(outdir, tag)
-tag='l2_depth_4/img'
+tag='l2_depth_4'
 checkpoint=
 
 [Train]
-device="0"
+device="1"
 lr=[1e-4, 3e-5, 1e-5]
 epochs=[20, 50, 100]
 save_freq=5
