--- a/single_img_verify/error.cfg
+++ b/single_img_verify/error.cfg
@@ -1,6 +1,6 @@
 [IO]
-x0='data/x0.nii'
-var_roi_map='data/variance.seg.nrrd'
+x0='forbild/x0.nii'
+var_roi_map='forbild/variance.seg.nrrd'
 output_dir='/home/dwu/trainData/uncertainty_prediction/single_img_verify/'
 seed=0
 ntrain=700
@@ -10,8 +10,8 @@ nvalid=10
 # target='error': predict (y-f(x))**2, f(x) given by the checkpoint
 # target='error_x0': predict (y-x0)**2. predicting y**2 gives too high relative error
 target='error'
-checkpoint='/home/dwu/trainData/uncertainty_prediction/single_img_verify/std_x/mean/100.h5'
-tag='std_x/error'
+checkpoint='/home/dwu/trainData/uncertainty_prediction/single_img_verify/forbild/mean/100.h5'
+tag='forbild/error'
 
 [Train]
 device="0"
