--- a/single_img_verify/gaussian_assumption.cfg
+++ b/single_img_verify/gaussian_assumption.cfg
@@ -1,6 +1,6 @@
 [IO]
-x0='data/x0.nii'
-var_roi_map='data/variance.seg.nrrd'
+x0='forbild/x0.nii'
+var_roi_map='forbild/variance.seg.nrrd'
 output_dir='/home/dwu/trainData/uncertainty_prediction/single_img_verify/'
 seed=0
 ntrain=700
