--- a/single_img_verify/mean.cfg
+++ b/single_img_verify/mean.cfg
@@ -1,6 +1,6 @@
 [IO]
-x0='data/x0.nii'
-var_roi_map='data/variance.seg.nrrd'
+x0='forbild/x0.nii'
+var_roi_map='forbild/variance.seg.nrrd'
 output_dir='/home/dwu/trainData/uncertainty_prediction/single_img_verify/'
 seed=0
 ntrain=700
@@ -10,7 +10,7 @@ nvalid=10
 # target='error': predict (y-f(x))^2, f(x) given by the checkpoint
 target='mean'
 checkpoint=
-tag='std_x/mean'
+tag='forbild/mean'
 
 [Train]
 device="0"
