real image testing

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ __pycache__
 *.out
 figure/
 
+test/patients/results/
 single_img_verify/forbild/results/
 single_img_verify/forbild/test/sample_pairs.h5
